--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ button {
 }
 /* Card Container */
 .ecard {
-  background-color: #412f2f;
+  background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0,0,0, 1);
   max-width: 300px;
@@ -194,6 +194,7 @@ button {
   text-align: center;
   transition: transform 0.3s ease;
   margin: 10px;
+  display: flex;
 }
 .card:hover{
   transform:scale(1.05);
@@ -208,6 +209,9 @@ button {
   font-size: 1.5rem;
   margin-bottom: 10px;
   color: white;
+}
+.cardtry{
+  display: flex;
 }
 .product-description {
 font-size: 0.9rem;
@@ -237,4 +241,10 @@ margin-bottom: 15px;
 }
 .view-more{
   text-align:center;
+}
+
+/* footer section */
+.footer {
+  width: 100%;
+
 }
