--- a/style.css
+++ b/style.css
@@ -203,22 +203,23 @@ button {
   gap: 2rem;
 }
 
-
-
-
-
-/* Card Container */
-.ecard {
-  background-color: #ffffff;
+/* card container */
+.ecard{
+  display: flex;
+  margin: left 300px; 
+  justify-content: center;
+}
+.card {
+  background-color: #0c0c0c;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0,0,0, 1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 300px;
   padding: 20px;
   text-align: center;
   transition: transform 0.3s ease;
-  margin: 10px;
-  display: flex;
+  margin: 10px; 
 }
+
 .card:hover{
   transform:scale(1.05);
 }
@@ -233,9 +234,7 @@ button {
   margin-bottom: 10px;
   color: white;
 }
-.cardtry{
-  display: flex;
-}
+
 .product-description {
 font-size: 0.9rem;
 color:#777 ;
@@ -477,4 +476,77 @@ a:hover {
   text-decoration: underline;
 }
 
-/* about us page */
+/* Contact us page css */
+
+.background-page{
+  background-image: url(./img/headphone1.png);
+  background-position: center;
+  background-size: cover;
+  background-color: #777;
+  margin-top: -30px;
+  margin-bottom: -30px;
+  }
+  .contact-container {
+    background-color: rgba(255, 255, 255, 0.496);
+    padding: 30px;
+    max-width: 600px;
+    width: 100%;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    margin-left: 450px;
+    margin-top: 50px;
+    margin-bottom: 30px;
+  }
+  h2 {
+    text-align: center;
+    color: #333;
+    margin-bottom: 20px;
+  }
+  .form-group {
+    margin-bottom: 15px;
+  }
+  label {
+    display: block;
+    margin-bottom: 5px;
+    color: #333;
+  }
+  input[type="text"],
+  input[type="email"],
+  select,
+  textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+  }
+  
+  input[type="text"]:focus,
+  input[type="email"]:focus,
+  textarea:focus {
+    border-color: #007BFF;
+    outline: none;
+  }
+  
+  textarea {
+    resize: vertical;
+  }
+  
+  button {
+    width: 100%;
+    padding: 10px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #0056b3;
+  }
+ 
+  h3{
+    text-align: center;
+  }
