--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header,
 footer {
   color: rgb(253, 253, 253);
   font-size: large;
-  background-color: #000000;
+  background-color: #0e0d0d;
   width: 100vw;
 }
 
